// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collects bad indentations 1`] = `
"/* HTML */
a;
a;
 a;
/* HTML */
"
`;

exports[`extract empty script tag (#7) 1`] = `
"/* HTML *//* HTML */
"
`;

exports[`extract indented javascript 1`] = `
"/* HTML */
var foo = 1;
/* HTML */
"
`;

exports[`extract javascript with first line next to the script tag 1`] = `
"/* HTML */var foo = 1;
var baz = 1;
/* HTML */
"
`;

exports[`extract javascript with last line next to the script tag 1`] = `
"/* HTML */
var foo = 1;
var baz = 1;/* HTML */
"
`;

exports[`extract multiple script tags 1`] = `
"/* HTML */
var foo = 1;
/* HTML */
var bar = 1;
/* HTML */
"
`;

exports[`extract script containing 'lower than' characters correctly (#1) 1`] = `
"/* HTML */
if (a < b) { doit(); }
/* HTML */
"
`;

exports[`extract simple javascript 1`] = `
"/* HTML */var foo = 1;/* HTML */
"
`;

exports[`extracts a script tag with type=application/babel 1`] = `
"/* HTML */var foo = 1;/* HTML */
"
`;

exports[`extracts a script tag with type=application/javascript 1`] = `
"/* HTML */var foo = 1;/* HTML */
"
`;

exports[`extracts a script tag with type=application/x-babel 1`] = `
"/* HTML */var foo = 1;/* HTML */
"
`;

exports[`extracts a script tag with type=application/x-javascript 1`] = `
"/* HTML */var foo = 1;/* HTML */
"
`;

exports[`extracts a script tag with type=text/babel 1`] = `
"/* HTML */var foo = 1;/* HTML */
"
`;

exports[`extracts a script tag with type=text/javascript 1`] = `
"/* HTML */var foo = 1;/* HTML */
"
`;

exports[`extracts a script tag with type=text/x-babel 1`] = `
"/* HTML */var foo = 1;/* HTML */
"
`;

exports[`extracts a script tag with type=text/x-javascript 1`] = `
"/* HTML */var foo = 1;/* HTML */
"
`;

exports[`handles empty input 1`] = `""`;

exports[`handles self closing script tags in xhtml mode 1`] = `"/* HTML */"`;

exports[`handles the isJavaScriptMIMEType option 1`] = `
"/* HTML */
a
/* HTML */
b
/* HTML */
"
`;

exports[`indent option absolute indent with spaces 1`] = `
"/* HTML */
    a;
a;
a;
/* HTML */
"
`;

exports[`indent option absolute indent with tabs 1`] = `
"/* HTML */
		a;
a;
a;
/* HTML */
"
`;

exports[`indent option relative indent with spaces 1`] = `
"/* HTML */
a;
  a;
a;
/* HTML */
"
`;

exports[`indent option relative indent with tabs 1`] = `
"/* HTML */
a;
	a;
a;
/* HTML */
"
`;

exports[`keeps empty lines after the last html tags 1`] = `
"/* HTML */
a
/* HTML */


"
`;

exports[`trim last line spaces 1`] = `
"/* HTML */
var foo = 1;
/* HTML */
"
`;

exports[`works with CDATA 1`] = `
"/* HTML */
a;
/* HTML */
b;
/* HTML */
c;
/* HTML */"
`;

exports[`works with crlf new lines 1`] = `
"/* HTML */
foo;
bar;
  baz;
/* HTML */
"
`;
